src/objects/County__c.object
<CustomObject>
    <description>Counties within State with ID and Zip Codes.  Related to Sites and Service Rates.</description>
    <fields>
        <fullName>County_Code__c</fullName>
        <description>County Code from Legacy</description>
        <externalId>true</externalId>
        <label>County Code</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Site_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site/Region</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Counties</relationshipLabel>
        <relationshipName>Counties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>State Code.  Legacy Data Mapping.</description>
        <label>State Code</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>County</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>County_Code__c</columns>
        <columns>Site_Region__c</columns>
        <columns>State_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>